<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".project.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/activity_Camera_pv_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_Camera_fab_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/colorBlueLightV3"
        app:tint="@color/colorBlueLightV8"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/activity_Camera_iv_captured_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <ToggleButton
        android:id="@+id/activity_Camera_tb_camera_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/back"
        android:textOn="@string/front"
        android:checked="false"
        tools:ignore="RelativeOverlap" />


    <LinearLayout
        android:id="@+id/activity_camera_ll_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_camera_mb_ai"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlueLightV8"
            android:maxLines="1"
            android:text="@string/ai_tag_suggestion"
            app:backgroundTint="@color/colorBlueLightV3"
            fontPath="fonts/Shabnam-Medium.ttf"
            android:gravity="center"
            android:layout_gravity="end"
            app:cornerRadius="20dp"
            android:ellipsize="end"
            android:clickable="false"
            android:focusable="false"
            android:paddingBottom="10dp"
            android:visibility="visible"
            android:textAllCaps="false"/>

        <ProgressBar
            android:id="@+id/activity_camera_pb_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/activity_camera_cg_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:background="#33000000"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_Camera_fab_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_reload"
        app:tint="@color/colorBlueLightV8"
        app:backgroundTint="@color/colorBlueLightV3"
        android:visibility="gone"
        app:borderWidth="0dp"
        app:elevation="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:fabSize="mini"
        android:contentDescription="@string/app_name" />

</RelativeLayout>
